seedboxk8s/applications/pinepods/StatefulSet.postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pinepods-postgres
  namespace: pinepods
spec:
  serviceName: pinepods-postgres
  replicas: 1
  selector:
    matchLabels:
      app: pinepods-postgres
  template:
    metadata:
      labels:
        app: pinepods-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: seedbox-slow-mirror
      resources:
        requests:
          storage: 3Gi
