seedboxk8s/applications/pinepods/Service.postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: pinepods-postgres
  namespace: pinepods
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
  selector:
    app: pinepods-postgres
