seedboxk8s/applications/pinepods/Service.valkey.yaml
apiVersion: v1
kind: Service
metadata:
  name: pinepods-valkey
  namespace: pinepods
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
    name: valkey
  selector:
    app: pinepods-valkey
